--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_HOST = localhost
 DB_PORT = 3306
 DB_USER = root
 DB_PASSWORD = 
-DB_DATABASE = onepiecedb
-DB_CONNECTION_LIMIT = 10
+DB_DATABASE = onepiece
+DB_CONNECTION_LIMIT = 100
 
 PORT = 3000
